# hoops.sh

./: .gitignore  pyproject.toml
plans/: basketball-simulator-bug-fix-and-narration-overhaul.md  dead-code-integration-plan.md  hoops-sh-architecture-anti-patterns-analysis.md  phase-9-replace-inline-tick-loop-with-tickengine.md
src/hoops_sim/: __init__.py  main.py
tests/: conftest.py  test_utils.py
tests/test_actions/: test_dribble.py  test_finishing.py  test_passing.py  test_screen.py  test_triple_threat.py
tests/test_broadcast/: test_broadcast_director.py  test_intensity.py  test_names.py  test_prose_composer.py  test_shot_calibration.py  test_verbosity.py
tests/test_calibration/: test_targets.py
tests/test_court/: test_model.py  test_passing_lanes.py  test_spacing.py  test_zones.py
tests/test_defense/: test_closeout.py  test_help_rotation.py  test_pnr.py  test_schemes.py
tests/test_engine/: test_action_fsm.py  test_clock.py  test_court_state.py  test_possession.py  test_rebound_micro.py  test_scoreboard.py  test_simulator.py  test_situational.py  test_tick.py  test_transition.py
tests/test_events/: test_event_stream.py  test_game_events.py
tests/test_history/: test_records.py
tests/test_injury/: test_risk.py
tests/test_models/: test_attributes.py  test_badges.py  test_body.py  test_lifestyle.py  test_personality.py  test_player.py  test_relationships.py  test_season_stats.py  test_shooting_profile.py  test_tendencies.py
tests/test_narration/: test_broadcast.py  test_narration_overhaul.py  test_pipeline.py
tests/test_offseason/: test_draft.py  (+1 more)
(+234 files in other folders)
