[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hoops-sim"
version = "0.1.0"
description = "Maximum fidelity CLI basketball simulator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
hoops = "hoops_sim.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hoops_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
